stylesheets/_component.signin.scss
html,
body {
	height: 100%;
	margin: 0;
}

.video {
	height: 100%;
	width: 100%;
}

// prevent white flash before video plugin is initialised
.signin-backdrop {
	background: rgb(62, 73, 158);
	background: $background-gradient;
	background-attachment: fixed;
	bottom: 0;
	left: 0;
	position: absolute;
	right: 0;
	top: 0;
	z-index: -1;
}

// Fixes an issue with Safari where animations break when on top of a video
.signin-container {
	transform: translate3d(0, 0, 0);
}

.signin-brand {
	display: block;
	margin: 0 auto;
	position: relative;
	top: 50px;
	width: 200px;
}

.jadu-logomark {
	background: url($branding-navigation-fallback);
	background: url($branding-navigation), linear-gradient(transparent, transparent);
	background-size: $branding-navigation-width $branding-navigation-height;
	background-repeat: no-repeat;
	display: inline-block;
	margin-top: 5px;
	text-align: center;
	height: 100px;
	width: $branding-navigation-width;
}

.jadu-wordmark {
	display: none;
}

.signin {
	background-color: $signin-bg-color-fallback;
	background-color: $signin-bg-color;
	box-shadow: 0 0 0 $shadow-large rgba(255, 255, 255, .2);
	color: color(text);
	margin: 0 auto;
	min-height: 350px;
	padding: 0 0 10px;
	opacity: 1;
	overflow: hidden;
	position: relative;
	top: 5em;
	width: $signin-mobile-width;
	zoom: 1;
	transition: background-color .25s;

	@include respond-min($screen-tablet) {
		min-height: 320px;
		padding: 0 0 20px;
		width: $signin-full-width;
	}

	&--error {
		background-color: color(danger);
		animation: shake 400ms ease-in-out;

		.loading--circle i {
			border: 1px solid rgba(0, 0, 0, .2);
			border-top-color: color(white);
		}
	}

	&--success {
		background-color: color(success);
	}

	form {
		overflow: visible;
	}

	input,
	button {
		&:focus {
			outline: none;
			// box-shadow: 0 0 5px black;
		}
	}

	input {
		background-color: color(white);
		color: color(black);
	}

	a {
		color: color(text, link);
	}

	.btn {
		background: none;
		border: 2px solid rgb(62, 73, 158);
		box-shadow: none;
		color: rgb(62, 73, 158);

		&:hover,
		&:focus {
			background-color: rgba(0, 0, 0, .1);
			top: 0;
		}

		&:active {
			top: 1px;
		}

		&.is-loading {
			padding-top: 4px;
			padding-bottom: 5px;

			&:hover {
				background-color: none;
			}
		}
	}

	&.active-success {
		animation-delay: .8s;
		animation-duration: .25s;
		animation-fill-mode: both;
		animation-name: success-container;
		background-color: rgb(41, 124, 70);
		background-color: rgba(41, 124, 70, .9);
	}
}

.signin__inner {
	transition: background-color .5s, margin-left .25s;
	float: left;
	width: 1210px;

	.active-reset & {
		position: relative;
		margin-left: -$signin-mobile-width;

		@include respond-min($screen-tablet) {
			margin-left: -$signin-full-width;
		}
	}

	.active-forgot & {
		position: relative;
		margin-left: -$signin-mobile-width * 2;

		@include respond-min($screen-tablet) {
			margin-left: -$signin-full-width * 2;
		}
	}

	.active-twostep & {

		.signin-form,
		.signin-reset {
			opacity: 0;
			visibility: hidden;
			z-index: -1;
		}

		.signin-twostep {
			opacity: 1;
			z-index: 1;
		}
	}

	.active-success & {
		.signin-form,
		.signin-reset,
		.signin-twostep {
			opacity: 0;
			visibility: hidden;
			z-index: -1;
		}

		.signin-success {
			opacity: 1;
			z-index: 1;
		}
	}

}


.signin__panel {
	float: left;
	text-align: center;
	transition: opacity .5s, z-index .5s;
	width: $signin-mobile-width;

	@include respond-min($screen-tablet) {
		width: $signin-full-width;
	}
}

.signin__actions {
	margin: 0 auto 1em;
}

.signin__input {
	background-color: none;
	border: 2px solid rgb(62, 73, 158);
	box-shadow: inset 0 3px 0 #efefef;
	border-radius: 2px;
	display: inline-block;
	margin: 0 auto 1em;
	padding: 10px;
	width: 80%;
}

.signin__code1,
.signin__code2 {
	@extend .signin__input;
	display: inline-block;
	font-family: courier;
	letter-spacing: 5px;
	margin: 0 5px 1em;
	padding: 10px 10px 10px 12px;
	width: 20%;

	@include respond-min($screen-tablet) {
		padding: 10px 10px 10px 20px;
	}
}

.signin__submit {
	display: inline-block;
	margin: 0 auto;
}

.signin__group {
	position: relative;

	.signin__reset {
		color: $signin-bg-color;
		position: absolute;
		text-decoration: none;
		top: 10px;
		right: 50px;
	}

	.tooltip-arrow {
		border-left-color: $signin-bg-color !important;
	}

	.tooltip-inner {
		background-color: $signin-bg-color;
	}

	label {
		display: block;
		padding-left: 20px;
		text-align: left;
		width: 100%;

		@include respond-min($screen-tablet) {
			padding-left: 40px;
		}
	}
}

.signin__info {
	display: block;
	font-family: $font-family-heading-light;
	font-size: $font-size-base;
	line-height: $line-height-base;
	margin-bottom: 1em;
	padding: 0 5px;
}

.signin__link {
	display: inline-block;
	font-size: .8em;

	&:focus {
		outline-color: color(white);
	}
}

.signin__hint {
	@include icon-FontAwesome();
	animation-duration: 1s;
	animation-fill-mode: both;
	animation-iteration-count: infinite;
	animation-name: hint-wobble;
	display: inline-block;
	font-size: 1.5em;
	left: 5px;
	position: absolute;
	width: 25px;
	top: 2px;

	@include respond-min($screen-tablet) {
		left: 12px;
		top: 6px;
	}

	&::before {
		content: '\f0a4';
	}

	.signin-twostep & {
		left: 55px;

		@include respond-min($screen-tablet) {
			left: 85px;
		}
	}

	.signin__code2 + & {
		left: inherit;
		right: 50px;

		@include respond-min($screen-tablet) {
			left: inherit;
			right: 80px;
		}

		&::before {
			content: '\f0a5';
		}
	}
}

.shake {
  animation: shake 500ms ease-in-out;
}

.signin--error,
.signin--success {
	color: color(white);

	.btn {
		border-color: color(white);
		color: color(white);
	}

	a {
		color: color(white);
	}

	.signin__input {
		border-color: color(black);
	}
}

.signin__icon {
	background-image: url($branding-site);
	background-size: $branding-site-height 100px;
	background-position: 50% 0;
	background-repeat: no-repeat;
	border-radius: $branding-site-radius;
	display: inline-block;
	margin: 20px auto 0;
	text-align: center;
	height: $branding-site-height;
	width: $branding-site-width;

	.signin--error &,
	.signin-reset &,
	.signin-forgot &,
	.signin-twostep &,
	.signin-success & {
		@include icon-FontAwesome();
		background-image: none;
		border-radius: 65px;
		line-height: 65px;
		margin-bottom: 6px;
	}

	.signin-reset &,
	.signin-forgot &,
	.signin-twostep &,
	.signin-success & {
		background-color: #fff;

		&::before {
			display: inline-block;
			color: #2f8dbd;
			width: 66px;
		}
	}

	.signin--error &::before {
		content: '\f119';
		font-size: 75px;
	}

	.signin-twostep &::before {
		content: '\f10b';
		font-size: 65px;

		.signin--error & {
			color: color(danger);
		}
	}

	.signin-forgot &::before {
		content: '\f128';
		font-size: 65px;
		width: 40px;
		margin-left: -2px;
	}

	.signin-reset & {
		background-color: #fff;

		&::before {
			//&#xf0e0;
			content: '\f0e0';
			display: inline-block;
			color: #2f8dbd;
			font-size: 35px;
			width: 66px;
		}
	}

	.active-success .signin-success & {
		animation-duration: 1s;
		animation-fill-mode: both;
		animation-name: success-icon;

		&::before {
			content: '\f087';
			color: color(success);
			font-size: 35px;
		}
	}
}


.signin-twostep,
.signin-success {

	opacity: 0;
	position: absolute;
	top: 0;
	left: 0;
	z-index: -1;

	.signin__group {
		margin-top: 1.5em;
	}
}

// 2FA code input in control centre UI
.form__group .controls,
.modal {
	.form__control.signin__code1,
    .form__control.signin__code2 {
        display: inline-block;
        font-family: courier;
        letter-spacing: 2px;
        padding: 0 10px;
        width: 55px;
    }
}

// Scale effect is disabled in Firefox because of horrible performance issues
@keyframes success-icon {
	0% {
		transform: translateY(0) scale(1);
	}

	50% {
		transform: translateY(160%) scale(2);
	}

	100% {
		-moz-transform: translateY(160%) scale(1);
		transform: translateY(160%) scale(1.5);
	}
}

@keyframes hint-wobble {
	0%, 50%, 100% {
		transform: translateX(0);
	}

	25%, 75% {
		transform: translateX(-5px);
	}
}

@keyframes shake {
	0% {
		transform: translateX(0);
	}

	12.5% {
		transform: translateX(-10px) rotateY(-5deg);
	}

	37.5% {
		transform: translateX(10px) rotateY(4deg);
	}

	62.5% {
		transform: translateX(-5px) rotateY(-2deg);
	}

	87.5% {
		transform: translateX(5px) rotateY(1deg);
	}

	100% {
		transform: translateX(0);
	}
}

@keyframes fade-in {
	from {
		opacity: 0;
	}

	to {
		opacity: 1;
	}
}



// Full-bleed background image for IE7 & 8
// The required markup & image for this is contained in a conditional comment
.signin-oldie-bg {
	position: fixed;
	top: -50%;
	left: -50%;
	width: 200%;
	height: 200%;

	img {
		position: absolute;
		top: 0;
		left: 0;
		right: 0;
		bottom: 0;
		margin: auto;
		min-width: 50%;
		min-height: 50%;
	}

	+ .video {
		background: none;
	}
}


// IE8 fixes for icon positions
.ie8 .signin-reset .signin__icon {
	padding-left: 15px;
}

.ie8 .signin-twostep .signin__icon,
.ie8 .signin-success .signin__icon {
	padding-left: 18px;
}

[id="recaptcha_widget_div"] {
	display: inline-block;
	margin: 0 auto 1em;
}

.signin-twostep-help {
	text-align: left;
	list-style-position: outside;
}

